--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -182,8 +182,8 @@
   --breadcrumbs-color: rgba(255, 255, 255, 0.45);
 
   // links
-  --a-link: #517cf6;
-  --a-link-hover: #4170f5;
+  --a-link: #4170f5;
+  --a-link-hover: #517cf6;
 
   // select
   --select-single-color: rgba(255, 255, 255, 0.85);
