Fix styling and export issue

--- a/app/assets/stylesheets/externals/antd-breadcrumbs.less
+++ b/app/assets/stylesheets/externals/antd-breadcrumbs.less
@@ -5,6 +5,8 @@
     font-size: 12px;
 
     a {
+      display: flex;
+      align-items: center;
       color: var(--breadcrumbs-color);
 
       &:hover {
