Hide already added tags for a key

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -92,6 +92,7 @@
   // other stuff
   --column-tag-color: #9626ae;
   --avatar-color: #111d39;
+  --custom-tag-color: #c41d7f;
 
   // editor
   --toolbar-action-active-background-color: #0000001a;
@@ -192,6 +193,7 @@
   --select-selected-color: #fff;
 
   // other stuff
+  --custom-tag-color: #e0529c;
 
   // editor
   --toolbar-action-active-background-color: #ffffff1a;
