Fix some layout issues

--- a/app/assets/stylesheets/externals/antd-tabs.less
+++ b/app/assets/stylesheets/externals/antd-tabs.less
@@ -28,6 +28,13 @@
     border-top: 0;
   }
 
+  .ant-tabs-card.ant-tabs-top > .ant-tabs-nav .ant-tabs-tab:not(:last-of-type),
+  .ant-tabs-card.ant-tabs-bottom > .ant-tabs-nav .ant-tabs-tab:not(:last-of-type),
+  .ant-tabs-card.ant-tabs-top > div > .ant-tabs-nav .ant-tabs-tab:not(:last-of-type),
+  .ant-tabs-card.ant-tabs-bottom > div > .ant-tabs-nav .ant-tabs-tab:not(:last-of-type) {
+    margin-right: 0;
+  }
+
   .ant-tabs-top > .ant-tabs-nav::before,
   .ant-tabs-bottom > .ant-tabs-nav::before,
   .ant-tabs-top > div > .ant-tabs-nav::before,
