Add support to mark tags as not editable for translators

--- a/app/assets/stylesheets/externals/antd-alert.less
+++ b/app/assets/stylesheets/externals/antd-alert.less
@@ -5,7 +5,8 @@
     max-width: 480px;
   }
 
-  .ant-alert-message {
+  .ant-alert-message,
+  .ant-alert-description {
     margin-left: 8px;
   }
 
