--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -90,7 +90,7 @@
   --select-selected-color: #000;
 
   // other stuff
-  --column-tag-color: #9626ae;
+  --column-tag-color: #7c0596;
   --avatar-color: #111d39;
   --custom-tag-color: #c41d7f;
 
