--- a/app/assets/stylesheets/externals/antd.less
+++ b/app/assets/stylesheets/externals/antd.less
@@ -14,6 +14,7 @@
 @import "antd-select.less";
 @import "antd-picker.less";
 @import "antd-tooltip.less";
+@import "antd-tag.less";
 
 // Fix wrong flex direction of main layout.
 .ant-layout.ant-layout-has-sider {
