Convert export config form to functional component, add support to set flavor for export config

--- a/app/assets/stylesheets/externals/antd-customization.scss
+++ b/app/assets/stylesheets/externals/antd-customization.scss
@@ -68,6 +68,10 @@
     text-overflow: ellipsis;
   }
 
+  .ant-modal .ant-table tbody > tr.ant-table-row:hover > td {
+    background: inherit;
+  }
+
   .ant-layout {
     // Fix content overflowing horizontally.
     overflow-x: hidden;
