Make tags feature free

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -9,7 +9,7 @@
   --primary-light-color: #e3eaff;
   --background-highlight-color: #1c70f51a;
 
-  --color-primary: #004ff2;
+  --color-primary: #557fff;
   --color-primary-light: #0956f6;
   --color-passive: #aaa;
   --color-passive-hover: #333;
