--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -153,3 +153,10 @@ mark {
         font-size: 16px;
     }
 }
+
+.enable-ul {
+  li {
+    list-style-position: inside;
+    list-style-type: disc;
+  }
+}
