Remove google font

--- a/app/views/layouts/email.html.erb
+++ b/app/views/layouts/email.html.erb
@@ -20,8 +20,7 @@
       body {
         background-color: #101727;
         color: #fff;
-        font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, sans-serif;
-        -webkit-font-smoothing: antialiased;
+        font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
         font-size: 14px;
         line-height: 1.4;
         margin: 0;
@@ -36,7 +35,7 @@
         mso-table-rspace: 0pt;
         width: 100%; }
         table td {
-          font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, sans-serif;
+          font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
           font-size: 14px;
           vertical-align: top;
       }
@@ -119,7 +118,7 @@
       h3,
       h4 {
         color: #fff;
-        font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, sans-serif;
+        font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
         font-weight: bold;
         line-height: 1.4;
         margin: 0;
@@ -138,7 +137,7 @@
       p,
       ul,
       ol {
-        font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, sans-serif;
+        font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
         font-size: 14px;
         font-weight: normal;
         margin: 0;
@@ -343,9 +342,6 @@
           border-color: #327ef6 !important;
         }
       }
-    </style>
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
     </style>
   </head>
   <body class="">
