--- a/app/assets/stylesheets/externals/antd-menu.less
+++ b/app/assets/stylesheets/externals/antd-menu.less
@@ -9,7 +9,7 @@
   }
 
   .ant-menu-submenu > .ant-menu {
-    background: transparent;
+    background: var(--background-color);
   }
 
   .ant-menu-item > a {
@@ -54,10 +54,6 @@
 
   .ant-menu-submenu-selected {
     color: var(--main-sidebar-active-color);
-  }
-
-  .ant-menu-submenu-title > a {
-    color: var(--background-color);
   }
 
   .ant-menu-submenu-selected .ant-menu-submenu-title > a {
