--- a/app/assets/stylesheets/externals/antd-typography.less
+++ b/app/assets/stylesheets/externals/antd-typography.less
@@ -2,7 +2,11 @@
 .dark-theme,
 .light-theme {
   .ant-typography code {
-    background: var(--primary-light-color);
+    background: var(--typography-code-background);
     border: 0;
+  }
+
+  .ant-typography .anticon {
+    color: var(--typography-code-color);
   }
 }
