--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -173,9 +173,9 @@
   // sub sidebar
   --sidebar-header-color: #fff;
   --sidebar-indicator-color: #fff;
-  --sidebar-item-active-color: #7398f5;
-  --sidebar-item-active-color-hover: #7398f5;
-  --sidebar-item-active-background-color: #111d39;
+  --sidebar-item-active-color: #8ab4f8;
+  --sidebar-item-active-color-hover: #8ab4f8;
+  --sidebar-item-active-background-color: #8ab4f814;
   --sidebar-item-color: #737373;
   --sidebar-item-color-hover: #fff;
   --sidebar-background-color: var(--background-color);
@@ -189,8 +189,8 @@
   --breadcrumbs-last-color: rgba(255, 255, 255, 0.65);
 
   // links
-  --a-link: #7398f5;
-  --a-link-hover: #7398f5;
+  --a-link: #8ab4f9;
+  --a-link-hover: #8ab4f9;
 
   // typography code
   --typography-code-background: transparent;
