--- a/app/assets/stylesheets/externals/antd.less
+++ b/app/assets/stylesheets/externals/antd.less
@@ -15,6 +15,7 @@
 @import "antd-picker.less";
 @import "antd-tooltip.less";
 @import "antd-tag.less";
+@import "antd-notification.less";
 
 // Fix wrong flex direction of main layout.
 .ant-layout.ant-layout-has-sider {
