Update text in welcome email

--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -7,7 +7,7 @@
 
 <p>thank you for signing up.</p>
 
-<p>In the next 7 days you can experience all the translation tools of Texterify for free. After the end of your trial your plan will automatically switch to the <b>Free</b> plan.</p>
+<p>In the next 7 days you can experience all the translation tools of Texterify for free. After the end of your trial your plan will automatically switch to the <b>Free</b> plan if you have not selected any paid plan.</p>
 
 <p>We hope you have a great time with Texterify. If you have any feedback or questions you can always send us an email to <a href="mailto:support@texterify.com">support@texterify.com</a> or create a ticket on the Texterify <a href="https://github.com/texterify/texterify/issues">repository</a>.</p>
 
