--- a/app/assets/stylesheets/externals/antd-dark.less
+++ b/app/assets/stylesheets/externals/antd-dark.less
@@ -56,8 +56,8 @@
     border-color: #303030;
   }
 
-  .ant-table-tbody > tr.texterify-table-row-disabled {
-    td > *:not(.texterify-table-row-disabled-skip) {
+  .ant-table-tbody > tr.app-table-row-disabled {
+    td > *:not(.app-table-row-disabled-skip) {
       pointer-events: none;
       filter: opacity(0.25);
     }
