--- a/app/views/layouts/email.html.erb
+++ b/app/views/layouts/email.html.erb
@@ -366,7 +366,7 @@
                       <td>
                         <%= yield %>
                         <% unless @on_premise %>
-                          <p>Your Texterify Team</p>
+                          <p>Your Txty Team</p>
                         <% end %>
                       </td>
                     </tr>
@@ -384,18 +384,18 @@
                   <tr>
                     <td class="content-block">
                     <% if @on_premise %>
-                      <p>This is an email from an on-premise Texterify instance which is not officially affiliated with the cloud version of Texterify.</p>
+                      <p>This is an email from an on-premise Txty instance which is not officially affiliated with the cloud version of Txty.</p>
                     <% else %>
-                      <p>&copy; Texterify, aaa – all about apps GmbH, Siebenbrunnengasse 17 / TOP 3, A-1050 Wien</p>
+                      <p>&copy; Txty, aaa – all about apps GmbH, Siebenbrunnengasse 17 / TOP 3, A-1050 Wien</p>
                       <p>
-                        Visit <a href="https://texterify.com">texterify.com</a> for more information.
+                        Visit <a href="https://txty.io">txty.io</a> for more information.
                       </p>
                       <p>
-                        Questions? Contact us by sending an email to <a href="mailto:support@texterify.com">support@texterify.com</a>.
+                        Questions? Contact us by sending an email to <a href="mailto:support@txty.io">support@txty.io</a>.
                       </p>
                       <p>Coded with love in beautiful Vienna.</p>
                       <p style="font-size: 10px; line-height: 14px; margin-top: 24px">
-                        This is an automatically sent email by Texterify.
+                        This is an automatically sent email by Txty.
                       </p>
                     <% end %>
                     </td>
