--- a/app/views/subscription_mailer/trial_expiring.html.erb
+++ b/app/views/subscription_mailer/trial_expiring.html.erb
@@ -9,6 +9,6 @@
 
 <p>You can manage your subscription by clicking <a href="<%= @manage_subscription_link %>">here</a>.</p>
 
-<p>If you have any feedback or questions you can always send us an email to <a href="mailto:support@texterify.com">support@texterify.com</a>.</p>
+<p>If you have any feedback or questions you can always send us an email to <a href="mailto:support@txty.io">support@txty.io</a>.</p>
 
-<p>Have fun using Texterify and optimizing your localization process.</p>
+<p>Have fun using Txty and optimizing your localization process.</p>
