--- a/app/views/user_mailer/invite.html.erb
+++ b/app/views/user_mailer/invite.html.erb
@@ -1,14 +1,14 @@
-<% content_for :title do %>You haven been invited to Texterify<% end %>
-<% content_for :preheader do %>ou haven been invited to Texterify<% end %>
+<% content_for :title do %>You haven been invited to Txty<% end %>
+<% content_for :preheader do %>ou haven been invited to Txty<% end %>
 
-<h1>You have been invited to Texterify</h1>
+<h1>You have been invited to Txty</h1>
 
 <p>Hello,</p>
 
-<p>the user <b><%= @invite_from %></b> invited you to join Texterify and work together on their translations.</p>
+<p>the user <b><%= @invite_from %></b> invited you to join Txty and work together on their translations.</p>
 
 <% if @on_premise %>
-    <p>This is an invite to an on-premise instance of Texterify which can be found on <a href="<%= root_url %>"><%= root_url %></a> and is not affiliated with the cloud version of Texterify over at <a href="https://texterify.com">texterify.com</a>.</p>
+    <p>This is an invite to an on-premise instance of Txty which can be found on <a href="<%= root_url %>"><%= root_url %></a> and is not affiliated with the cloud version of Txty over at <a href="https://txty.io">txty.io</a>.</p>
 <% end %>
 
 <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
