--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,14 +1,14 @@
-<% content_for :title do %>Welcome to Texterify<% end %>
-<% content_for :preheader do %>Welcome to Texterify<% end %>
+<% content_for :title do %>Welcome to Txty<% end %>
+<% content_for :preheader do %>Welcome to Txty<% end %>
 
-<h1>Welcome to Texterify</h1>
+<h1>Welcome to Txty</h1>
 
 <p>Hello <%= @username %>,</p>
 
 <p>thank you for signing up.</p>
 
-<p>In the next 7 days you can experience all the translation tools of Texterify for free. After the end of your trial your plan will automatically switch to the <b>Free</b> plan if you have not selected any paid plan.</p>
+<p>In the next 7 days you can experience all the translation tools of Txty for free. After the end of your trial your plan will automatically switch to the <b>Free</b> plan if you have not selected any paid plan.</p>
 
-<p>We hope you have a great time with Texterify. If you have any feedback or questions you can always send us an email to <a href="mailto:support@texterify.com">support@texterify.com</a> or create a ticket on the Texterify <a href="https://github.com/texterify/texterify/issues">repository</a>.</p>
+<p>We hope you have a great time with Txty. If you have any feedback or questions you can always send us an email to <a href="mailto:support@txty.io">support@txty.io</a> or create a ticket on the Txty <a href="https://github.com/txty-io/txty/issues">repository</a>.</p>
 
-<p>Have fun using Texterify and optimizing your localization process.</p>
+<p>Have fun using Txty and optimizing your localization process.</p>
