--- a/app/assets/stylesheets/externals/antd-breadcrumbs.less
+++ b/app/assets/stylesheets/externals/antd-breadcrumbs.less
@@ -4,6 +4,10 @@
   .ant-breadcrumb {
     font-size: 12px;
 
+    .anticon {
+      font-size: 12px;
+    }
+
     a {
       display: flex;
       align-items: center;
