Add key limit alert, improve styling

--- a/app/assets/stylesheets/externals/antd-dark.less
+++ b/app/assets/stylesheets/externals/antd-dark.less
@@ -229,25 +229,25 @@
 
   // Fix button color
   .ant-btn-dangerous {
-    color: #cc3d3f;
-    border-color: #cc3d3f;
+    color: #c8282a;
+    border-color: #c8282a;
   }
 
   .ant-btn-dangerous.ant-btn-primary {
-    background: #cc3d3f;
+    background: #c8282a;
     color: #fff;
-    border-color: #cc3d3f;
+    border-color: #c8282a;
 
-    &:hover {
-      background: #dd4345;
-      border-color: #dd4345;
+    &:hover, &:focus {
+      background: #d72b2d;
+      border-color: #d72b2d;
     }
   }
 
   .ant-btn-dangerous:hover,
   .ant-btn-dangerous:focus {
-    color: #ff4d4f;
-    border-color: #ff4d4f;
+    color: #d72b2d;
+    border-color: #d72b2d;
   }
 
   .ant-alert {
