Add checks for language and projects limit

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -18,6 +18,9 @@
   --color-golden: #d5bc00;
   --color-error: #e84749;
 
+  // banner
+  --free-version-banner-background: #122450;
+
   // drawer
   --drawer-background-color: var(--background-color);
   --drawer-header-background-color: var(--header-background-color);
