Improve tag color

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -235,7 +235,7 @@
   --select-selected-color: #fff;
 
   // other stuff
-  --column-tag-color: #375ef8;
+  --column-tag-color: #204bee;
   --avatar-background-color: #122450;
   --avatar-color: #002b66;
   --custom-tag-color: #e0529c;
