Refactor login, add i18n with react-intl

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -18,6 +18,8 @@
   --color-golden: #d5bc00;
   --color-error: #e84749;
 
+  --general-border-radius: 4px;
+
   // banner
   --free-version-banner-background: #122450;
 
