--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -104,6 +104,8 @@
   --breadcrumbs-last-color: rgba(0, 0, 0, 1);
 
   // links
+  --a-link: #4170ff;
+  --a-link-hover: #4170ff;
 
   // select
   --select-single-color: rgba(0, 0, 0, 0.85);
@@ -113,8 +115,8 @@
 
   // other stuff
   --column-tag-color: #375ef8;
-  --avatar-background-color: var(--primary-light-color);
-  --avatar-color: #002b66;
+  --avatar-background-color: #122450;
+  --avatar-color: #fff;
   --custom-tag-color: #c41d7f;
 
   // editor
